2009-12-02  Kaz Kylheku  <kkylheku@gmail.com>

	* Makefile (install-tests): New target. Provides a way to make the
	test cases part of the installation, and a generated script to run the
	commands on the installation host.

2009-12-02  Kaz Kylheku  <kkylheku@gmail.com>

	Fix annoyances with dependency generation, such as picking up local
	files that are not in the project.

	* Makefile (depend): Rule passes object file names as arguments
	to depend.txr script.

	* depend.txr: Changed to take names of object files from command line,
	rather than scanning the directory for all .c files. Switched
	to new style next directives, using quasiliterals.

	* dep.mk: Regenerated.

2009-11-28  Kaz Kylheku  <kkylheku@gmail.com>

	* Makefile (CFLAGS): If the compiler matches the pattern %g++,
	then remove some C-front-end-specific warnings from CFLAGS,
	which the g++ front end will complain about.

2009-11-28  Kaz Kylheku  <kkylheku@gmail.com>

	* Makefile (CFLAGS): add -Dlint to CFLAGS when compiling y.tab.o.
	This suppresses some warnings from a byacc-generated parser,
	and gets rid of a useless static sccsid array. May help with
	Bison-generated parser also.

2009-11-28  Kaz Kylheku  <kkylheku@gmail.com>

	* parser.l: Use flex options to suppress generation of the
	unused functons yyunput and yyinput, thus getting rid of
	some compiler diagnostics.

2009-11-28  Kaz Kylheku  <kkylheku@gmail.com>

	Code cleanup. All private functions static. Private stuff
	in regex module not exposed in header. Etc.

	* configure (diag_flags): Add -Wmissing-prototypes and
	-Wstrict-prototypes.

	* gc.c (more): Turn into prototyped definition with (void).

	* gc.h (unmark): Declared.

	* hash.c (hash_equal, hash_destroy, hash_mark, hash_grow): Private
	functions defined static.

	* lib.c (flatten_helper, do_bind2, do_bind2other): Likewise.

	* lib.h (make_package, merge, d): Declared.

	* match.c (dump_shell_string, dump_byte_string, dump_var,